Added a nicer parallax sample
Fixes #75

--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -208,7 +208,8 @@
     <Content Include="SamplePages\BlurBehavior\blurBehavior.gif" />
     <Content Include="SamplePages\OffsetBehavior\offsetBehavior.gif" />
     <Content Include="SamplePages\OpacityBehavior\opacityBehavior.gif" />
-    <Content Include="SamplePages\ParallaxBehavior\ParallaxBackground.png" />
+    <Content Include="SamplePages\ParallaxBehavior\big-buck-bunny-background.jpg" />
+    <Content Include="SamplePages\ParallaxBehavior\big-buck-bunny-poster.jpg" />
     <Content Include="SamplePages\RotationBehavior\rotationBehavior.gif" />
     <Content Include="SamplePages\RotatorTile\icon.png" />
     <Content Include="SamplePages\LiveTile\icon.jpg" />
