--- a/UnitTests/UnitTests.csproj
+++ b/UnitTests/UnitTests.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Helpers\Test_ConnectionHelper.cs" />
     <Compile Include="Helpers\Test_StorageFileHelper.cs" />
     <Compile Include="Helpers\Test_StreamHelper.cs" />
+    <Compile Include="Helpers\Test_WeakEventListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTestApp.xaml.cs">
       <DependentUpon>UnitTestApp.xaml</DependentUpon>
