--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -129,11 +129,6 @@
     <Content Include="Assets\NotificationAssets\Sunny.png" />
     <Content Include="Assets\NotificationAssets\Thunderstorms-Square.png" />
     <Content Include="Assets\NotificationAssets\Thunderstorms.png" />
-    <Content Include="Assets\BadgeLogo.scale-100.png" />
-    <Content Include="Assets\BadgeLogo.scale-125.png" />
-    <Content Include="Assets\BadgeLogo.scale-150.png" />
-    <Content Include="Assets\BadgeLogo.scale-200.png" />
-    <Content Include="Assets\BadgeLogo.scale-400.png" />
     <Content Include="Assets\Photos\BigFourSummerHeat.png" />
     <Content Include="Assets\Photos\BisonBadlandsChillin.png" />
     <Content Include="Assets\Photos\ColumbiaRiverGorge.png" />
@@ -157,42 +152,74 @@
     <Content Include="Assets\Photos\SpeedTripleAtristsPoint.png" />
     <Content Include="Assets\Photos\Van.png" />
     <Content Include="Assets\Photos\WestSeattleView.png" />
-    <Content Include="Assets\SplashScreen.scale-100.png" />
-    <Content Include="Assets\SplashScreen.scale-125.png" />
-    <Content Include="Assets\SplashScreen.scale-150.png" />
-    <Content Include="Assets\SplashScreen.scale-400.png" />
-    <Content Include="Assets\Square150x150Logo.scale-100.png" />
-    <Content Include="Assets\Square150x150Logo.scale-125.png" />
-    <Content Include="Assets\Square150x150Logo.scale-150.png" />
-    <Content Include="Assets\Square150x150Logo.scale-400.png" />
-    <Content Include="Assets\Square310x310Logo.scale-100.png" />
-    <Content Include="Assets\Square310x310Logo.scale-125.png" />
-    <Content Include="Assets\Square310x310Logo.scale-150.png" />
-    <Content Include="Assets\Square310x310Logo.scale-200.png" />
-    <Content Include="Assets\Square310x310Logo.scale-400.png" />
-    <Content Include="Assets\Square44x44Logo.scale-100.png" />
-    <Content Include="Assets\Square44x44Logo.scale-125.png" />
-    <Content Include="Assets\Square44x44Logo.scale-150.png" />
-    <Content Include="Assets\Square44x44Logo.scale-400.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-16.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-16_altform-unplated.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-24.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-256.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-256_altform-unplated.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-48.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-48_altform-unplated.png" />
-    <Content Include="Assets\Square71x71Logo.scale-100.png" />
-    <Content Include="Assets\Square71x71Logo.scale-125.png" />
-    <Content Include="Assets\Square71x71Logo.scale-150.png" />
-    <Content Include="Assets\Square71x71Logo.scale-200.png" />
-    <Content Include="Assets\Square71x71Logo.scale-400.png" />
-    <Content Include="Assets\StoreLogo.scale-125.png" />
-    <Content Include="Assets\StoreLogo.scale-150.png" />
-    <Content Include="Assets\StoreLogo.scale-200.png" />
-    <Content Include="Assets\StoreLogo.scale-400.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-100.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-125.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-150.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.scale-100.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.scale-125.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.scale-150.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.scale-200.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.scale-400.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-16.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-16_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-20.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-20_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-24.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-24_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-256.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-256_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-30.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-30_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-32.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-32_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-36.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-36_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-40.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-40_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-48.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-48_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-60.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-60_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-64.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-64_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-72.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-72_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-80.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-80_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-96.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppAppList.targetsize-96_altform-unplated.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppBadgeLogo.scale-100.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppBadgeLogo.scale-125.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppBadgeLogo.scale-150.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppBadgeLogo.scale-200.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppBadgeLogo.scale-400.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppLargeTile.scale-100.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppLargeTile.scale-125.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppLargeTile.scale-150.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppLargeTile.scale-200.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppLargeTile.scale-400.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppMedTile.scale-100.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppMedTile.scale-125.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppMedTile.scale-150.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppMedTile.scale-200.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppMedTile.scale-400.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppSmallTile.scale-100.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppSmallTile.scale-125.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppSmallTile.scale-150.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppSmallTile.scale-200.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppSmallTile.scale-400.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppSplashScreen.scale-100.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppSplashScreen.scale-125.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppSplashScreen.scale-150.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppSplashScreen.scale-200.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppSplashScreen.scale-400.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppStoreLogo.scale-100.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppStoreLogo.scale-125.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppStoreLogo.scale-150.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppStoreLogo.scale-200.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppStoreLogo.scale-400.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppWideTile.scale-100.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppWideTile.scale-125.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppWideTile.scale-150.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppWideTile.scale-200.png" />
+    <Content Include="Assets\UWPCommunityToolkitSampleAppWideTile.scale-400.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <Content Include="Icons\Behaviors.png" />
     <Content Include="Assets\Win-App-Toolkit-logo-ccc.png" />
@@ -206,6 +233,7 @@
     <Content Include="SamplePages\Bing Service\BingCode.bind" />
     <Content Include="SamplePages\Bing Service\icon.png" />
     <Content Include="SamplePages\BlurBehavior\blurBehavior.gif" />
+    <Content Include="SamplePages\Facebook Service\FacebookLogo.png" />
     <Content Include="SamplePages\OffsetBehavior\offsetBehavior.gif" />
     <Content Include="SamplePages\OpacityBehavior\opacityBehavior.gif" />
     <Content Include="SamplePages\ParallaxBehavior\NeedleBackground.png" />
@@ -224,6 +252,7 @@
     <Content Include="SamplePages\HeaderedTextBlock\HeaderedTextBlockCode.bind" />
     <Content Include="SamplePages\ImageEx\icon.jpg" />
     <None Include="Microsoft.Toolkit.Uwp.SampleApp.ruleset" />
+    <Content Include="SamplePages\Twitter Service\TwitterLogo.png" />
     <Content Include="SamplePages\WeatherLiveTileAndToast\icon.jpg" />
     <Content Include="SamplePages\WeatherLiveTileAndToast\WeatherLiveTileAndToastCode.bind" />
     <Content Include="SamplePages\ImageEx\ImageExCode.bind" />
@@ -377,13 +406,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties\Default.rd.xml" />
-    <Content Include="Assets\LockScreenLogo.scale-200.png" />
-    <Content Include="Assets\SplashScreen.scale-200.png" />
-    <Content Include="Assets\Square150x150Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.scale-200.png" />
-    <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
-    <Content Include="Assets\StoreLogo.scale-100.png" />
-    <Content Include="Assets\Wide310x150Logo.scale-200.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
