--- a/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Microsoft.Toolkit.Uwp.SampleApp.csproj
@@ -230,42 +230,44 @@
     <Content Include="Icons\Services.png" />
     <Content Include="SamplePages\Bing Service\BingCode.bind" />
     <Content Include="SamplePages\Bing Service\icon.png" />
-    <Content Include="SamplePages\Blur\blurBehavior.gif" />
+    <Content Include="SamplePages\Blur\BlurBehavior.png" />
     <Content Include="SamplePages\Facebook Service\FacebookLogo.png" />
-    <Content Include="SamplePages\Offset\offsetBehavior.gif" />
-    <Content Include="SamplePages\Fade\FadeBehavior.gif" />
+    <Content Include="SamplePages\Fade\FadeBehavior.png" />
+    <Content Include="SamplePages\HamburgerMenu\HamburgerMenu.png" />
+    <Content Include="SamplePages\HeaderedTextBlock\HeaderedTextBlock.png" />
+    <Content Include="SamplePages\ImageEx\ImageEx.png" />
+    <Content Include="SamplePages\Offset\OffsetBehavior.png" />
+    <Content Include="SamplePages\Parallax\mountain.png" />
     <Content Include="SamplePages\Parallax\NeedleBackground.png" />
-    <Content Include="SamplePages\Parallax\ParallaxBackground.png" />
-    <Content Include="SamplePages\Rotate\RotateBehavior.gif" />
-    <Content Include="SamplePages\RotatorTile\icon.png" />
+    <Content Include="SamplePages\Parallax\ParallaxBehavior.png" />
+    <Content Include="SamplePages\PullToRefreshListView\PullToRefreshListView.png" />
+    <Content Include="SamplePages\RadialGauge\RadialGauge.png" />
+    <Content Include="SamplePages\RangeSelector\RangeSelector.png" />
+    <Content Include="SamplePages\ResponsiveGridView\ResponsiveGridView.png" />
+    <Content Include="SamplePages\Rotate\RotateBehavior.png" />
     <Content Include="SamplePages\LiveTile\icon.jpg" />
-    <Content Include="SamplePages\Scale\scaleBehavior.gif" />
+    <Content Include="SamplePages\RotatorTile\RotatorTile.png" />
+    <Content Include="SamplePages\Scale\ScaleBehavior.png" />
+    <Content Include="SamplePages\SlidableListItem\SlidableListItem.png" />
     <Content Include="SamplePages\Toast\icon.jpg" />
     <Content Include="SamplePages\Twitter Service\TwitterCode.bind" />
     <Content Include="SamplePages\Twitter Service\icon.png" />
     <Content Include="SamplePages\Facebook Service\FacebookCode.bind" />
     <Content Include="SamplePages\HamburgerMenu\HamburgerMenuCode.bind" />
-    <Content Include="SamplePages\HamburgerMenu\icon.jpg" />
     <Content Include="SamplePages\HeaderedTextBlock\HeaderedTextBlockCode.bind" />
-    <Content Include="SamplePages\ImageEx\icon.jpg" />
     <None Include="Microsoft.Toolkit.Uwp.SampleApp.ruleset" />
     <Content Include="SamplePages\Twitter Service\TwitterLogo.png" />
-    <Content Include="SamplePages\WeatherLiveTileAndToast\icon.jpg" />
+    <Content Include="SamplePages\VariableSizedGridView\VariableSizedGridView.png" />
+    <Content Include="SamplePages\WeatherLiveTileAndToast\WeatherLiveTileAndToast.png" />
     <Content Include="SamplePages\WeatherLiveTileAndToast\WeatherLiveTileAndToastCode.bind" />
     <Content Include="SamplePages\ImageEx\ImageExCode.bind" />
     <Content Include="SamplePages\Offset\OffsetBehaviorCode.bind" />
     <Content Include="SamplePages\Fade\FadeBehaviorCode.bind" />
-    <Content Include="SamplePages\PullToRefreshListView\icon.PNG" />
     <Content Include="SamplePages\PullToRefreshListView\PullToRefreshListViewCode.bind" />
-    <Content Include="SamplePages\RadialGauge\icon.jpg" />
     <Content Include="SamplePages\RadialGauge\RadialGaugeCode.bind" />
-    <Content Include="SamplePages\RangeSelector\icon.jpg" />
-    <Content Include="SamplePages\ResponsiveGridView\icon.jpg" />
     <Content Include="SamplePages\Rotate\RotateBehaviorCode.bind" />
     <Content Include="SamplePages\Scale\ScaleBehaviorCode.bind" />
-    <Content Include="SamplePages\SlidableListItem\icon.png" />
     <Content Include="SamplePages\SlidableListItem\SlidableListItemCode.bind" />
-    <Content Include="SamplePages\VariableSizedGridView\icon.jpg" />
     <Content Include="SamplePages\VariableSizedGridView\VariableSizedGridViewCode.bind" />
     <Content Include="Assets\Photos\Photos.json" />
     <Content Include="Assets\Photos\OnlinePhotos.json" />
