Renamed ResponsiveGridView to AdaptiveGridView

--- a/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Microsoft.Toolkit.Uwp.UI.Controls.csproj
@@ -73,8 +73,8 @@
     <Compile Include="VariableSizedGridView\VariableSizedGridView.Properties.cs" />
     <Compile Include="VariableSizedGridView\VariableSizedGridView.cs" />
     <Compile Include="VariableSizedGridView\VariableSizedGridViewPanel.cs" />
-    <Compile Include="ResponsiveGridView\ResponsiveGridView.Properties.cs" />
-    <Compile Include="ResponsiveGridView\ResponsiveGridView.cs" />
+    <Compile Include="AdaptiveGridView\AdaptiveGridView.Properties.cs" />
+    <Compile Include="AdaptiveGridView\AdaptiveGridView.cs" />
   </ItemGroup>
   <ItemGroup>
     <Page Include="HamburgerMenu\HamburgerMenu.xaml">
@@ -107,7 +107,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="ResponsiveGridView\ResponsiveGridView.xaml">
+    <Page Include="AdaptiveGridView\AdaptiveGridView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
