--- a/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
+++ b/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
@@ -49,12 +49,12 @@
     <None Include="project.json" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Converters\BoolToVisibilityConverter.cs" />
-    <Compile Include="Converters\CollectionVisibilityConverter.cs" />
+    <Compile Include="Converters\BoolToObjectConverter.cs" />
+    <Compile Include="Converters\CollectionEmptinessToObjectConverter.cs" />
     <Compile Include="Converters\ConverterTools.cs" />
+    <Compile Include="Converters\StringEmptinessToObjectConverter.cs" />
     <Compile Include="Converters\StringFormatConverter.cs" />
     <Compile Include="ImageCache\ImageCache.cs" />
-    <Compile Include="Converters\StringVisibilityConverter.cs" />
     <Compile Include="Extensions\VisualTreeExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
