--- a/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
+++ b/Microsoft.Toolkit.Uwp.UI/Microsoft.Toolkit.Uwp.UI.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Converters\CollectionVisibilityConverter.cs" />
     <Compile Include="Converters\ConverterTools.cs" />
     <Compile Include="Converters\StringFormatConverter.cs" />
+    <Compile Include="Extensions\HyperlinkExtensions.cs" />
     <Compile Include="ImageCache\ImageCache.cs" />
     <Compile Include="Converters\StringVisibilityConverter.cs" />
     <Compile Include="Extensions\VisualTreeExtensions.cs" />
